<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoonCal</string>
    <string name="action_legal">Legal</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="this_month">Go to today</string>
	<string name="action_settings">Settings</string>
    <string name="sunday_label">Sun</string>
    <string name="monday_label">Mon</string>
    <string name="tuesday_label">Tue</string>
    <string name="wednesday_label">Wed</string>
    <string name="thursday_label">Thu</string>
    <string name="friday_label">Fri</string>
    <string name="saturday_label">Sat</string>
    <string name="month_year_format">MMMM yyyy</string>
    <string name="dismiss">Dismiss</string>
	<string name="legal_notice">Version %s\nCopyright (C) 2013, 2014\u0020\u0020Hisanobu Tomari.\nPortions Copyright 1996 Christopher Osburn\n\nThis program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions; see the source for details.\nhttp://davy.nyacom.net/mooncal/</string>
	<string name="legal_url">http://davy.nyacom.net/mooncal/</string> 
	<string name="legal_goweb">Website</string>
    <string name="before_2001">Cannot show you calendars before 2001</string>
    <string name="pref_southhemi">Southern Hemisphere</string>
	<string name="pref_southhemi_info">Changes the orientation of moon shapes</string>
	<string name="settings_title">Settings</string>
	<string name="pref_weekstart1">A week starts on Monday</string>
	<string name="pref_weekstart1_info">Leave unchecked for Sunday</string>
</resources>
